maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: not found: value fin
          fin = false
          ^JediEscaper:27: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if(!aMurNord(x,y) && x!=getMondeLargeur() && )
                                            ^